fixing z-index

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -165,6 +165,8 @@ body {
     
                     position: absolute;
                     top: -4.7rem;
+
+                    z-index: 10;
                 }
 
                 &-fill {
